[package]
name = "mir-json"
version = "0.1.0"
authors = ["Joshua Gancher <jrg358@cornell.edu>"]
repository = "https://github.com/GaloisInc/mir-json.git"
license = "MIT/Apache-2.0"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_cbor = "0.11"
tar = "0.4"
cargo_metadata = { version = "0.2" }
cargo = { version = "0.43", features = [ "vendored-openssl" ] }
toml = "0.5"
clap = "2.33"

[[bin]]
name = "cargo-crux-test"
path = "src/bin/wrapper.rs"
[[bin]]
name = "cargo-crux-test_real"
path = "src/bin/cargo-crux-test.rs"

[[bin]]
name = "cargo-saw-build"
path = "src/bin/wrapper.rs"
[[bin]]
name = "cargo-saw-build_real"
path = "src/bin/cargo-saw-build.rs"

[[bin]]
name = "cargo-mir-json"
path = "src/bin/wrapper.rs"
[[bin]]
name = "cargo-mir-json_real"
path = "src/bin/cargo-mir-json.rs"

[[bin]]
name = "crux-rustc"
path = "src/bin/wrapper.rs"
[[bin]]
name = "crux-rustc_real"
path = "src/bin/crux-rustc.rs"

[[bin]]
name = "mir-json-callgraph"
path = "src/bin/wrapper.rs"
[[bin]]
name = "mir-json-callgraph_real"
path = "src/bin/mir-json-callgraph.rs"

[[bin]]
name = "mir-json-dce"
path = "src/bin/wrapper.rs"
[[bin]]
name = "mir-json-dce_real"
path = "src/bin/mir-json-dce.rs"

[[bin]]
name = "mir-json-rustc-wrapper"
path = "src/bin/wrapper.rs"
[[bin]]
name = "mir-json-rustc-wrapper_real"
path = "src/bin/mir-json-rustc-wrapper.rs"

[[bin]]
name = "mir-json"
path = "src/bin/wrapper.rs"
[[bin]]
name = "mir-json_real"
path = "src/bin/mir-json.rs"

[[bin]]
name = "saw-rustc"
path = "src/bin/wrapper.rs"
[[bin]]
name = "saw-rustc_real"
path = "src/bin/saw-rustc.rs"
