[package]
name = "mir-json"
version = "0.1.0"
authors = ["Joshua Gancher <jrg358@cornell.edu>"]
repository = "https://github.com/GaloisInc/mir-json.git"
license = "MIT/Apache-2.0"
autobins = false

[package.metadata.rust-analyzer]
rustc_private=true

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_cbor = "0.11"
tar = "0.4"
cargo_metadata = { version = "0.15.1" }
cargo = { version = "0.91", features = [ "vendored-openssl" ] }
toml = "0.9"
clap = "3.1.0"
shell-escape = "0.1.5"
tempfile = "3.8"
log = "0.4.27"
env_logger = "0.11.8"

[[bin]]
name = "cargo-crux-test"
path = "src/bin/wrapper.rs"
[[bin]]
name = "cargo-crux-test_real"
path = "src/bin/cargo-crux-test.rs"

[[bin]]
name = "cargo-saw-build"
path = "src/bin/wrapper.rs"
[[bin]]
name = "cargo-saw-build_real"
path = "src/bin/cargo-saw-build.rs"

[[bin]]
name = "cargo-mir-json"
path = "src/bin/wrapper.rs"
[[bin]]
name = "cargo-mir-json_real"
path = "src/bin/cargo-mir-json.rs"

[[bin]]
name = "crux-rustc"
path = "src/bin/wrapper.rs"
[[bin]]
name = "crux-rustc_real"
path = "src/bin/crux-rustc.rs"

[[bin]]
name = "mir-json-callgraph"
path = "src/bin/wrapper.rs"
[[bin]]
name = "mir-json-callgraph_real"
path = "src/bin/mir-json-callgraph.rs"

[[bin]]
name = "mir-json-dce"
path = "src/bin/wrapper.rs"
[[bin]]
name = "mir-json-dce_real"
path = "src/bin/mir-json-dce.rs"

[[bin]]
name = "mir-json-rustc-wrapper"
path = "src/bin/wrapper.rs"
[[bin]]
name = "mir-json-rustc-wrapper_real"
path = "src/bin/mir-json-rustc-wrapper.rs"

[[bin]]
name = "mir-json-translate-libs"
path = "src/bin/wrapper.rs"
[[bin]]
name = "mir-json-translate-libs_real"
path = "src/bin/mir-json-translate-libs.rs"

[[bin]]
name = "mir-json"
path = "src/bin/wrapper.rs"
[[bin]]
name = "mir-json_real"
path = "src/bin/mir-json.rs"

[[bin]]
name = "saw-rustc"
path = "src/bin/wrapper.rs"
[[bin]]
name = "saw-rustc_real"
path = "src/bin/saw-rustc.rs"
