[package]
name = "crucible_proc_macros"
version = "0.1.0"
authors = ["Stuart Pernsteiner <spernsteiner@galois.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "fold", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
log = "0.4.27"
env_logger = "0.11.8"
